Fix letter spacing in resume buttons.

--- a/src/styling/MainSection.css
+++ b/src/styling/MainSection.css
@@ -36,6 +36,7 @@
   margin-bottom: 40px;
 }
 .resume-button {
+  letter-spacing: 3px;
   display: flex;
   flex-direction: row;
   align-items: center;
